istio/twas-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: twas-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cos
spec:
  hosts:
  - "*"
  gateways:
  - twas-gateway
  http:
  - match:
    - uri:
        prefix: /CustomerOrderServicesWeb
    route:
    - destination:
        host: customerorderservicesapp
        port:
          number: 9080
